--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,6 @@
 .main {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    justify-items: center;
     align-items: center;
-    padding: 50px;
 }
