Add mobile responsiveness to navbar, add name to navbar and tweak styling

--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -3,10 +3,8 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px 30px;
-    background-color: white;
-    color: black;
-    font-size: 32px;
+    padding: 10px 0;
+    font-size: 22px;
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 2px;
@@ -29,9 +27,4 @@
         border: none;
         cursor: pointer;
     }
-}
-
-.dark {
-    background-color: black;
-    color: white;
 }
