--- a/app/components/landing-section/landing.module.scss
+++ b/app/components/landing-section/landing.module.scss
@@ -4,17 +4,13 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-
-    img {
-        filter: invert(1);
-    }
+    padding: 10px;
 
     .text {
         display: flex;
         flex-direction: column;
         text-align: center;
         gap: 10px;
-        white-space: nowrap;
 
         h1 {
             font-size: 3em;
@@ -23,6 +19,12 @@
         h2 {
             font-size: 1.5em;
         }
+    }
+}
+
+.dark {
+    img {
+        filter: invert(1);
     }
 }
 
