--- a/app/components/landing-section/landing.module.scss
+++ b/app/components/landing-section/landing.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 20px;
-    padding: 10px;
+    padding: 10px 0;
 
     .text {
         display: flex;
@@ -53,10 +53,10 @@
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
-        max-width: 960px;
+        max-width: 1080px;
 
         .text {
-            text-align: right;
+            text-align: left;
 
             h1 {
                 font-size: 4em;
