--- a/app/components/landing-section/landing.module.scss
+++ b/app/components/landing-section/landing.module.scss
@@ -1,4 +1,4 @@
-.landingSection {
+.landing {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,7 +29,7 @@
 }
 
 @media only screen and (min-width: 420px) {
-    .landingSection {
+    .landing {
         .text {
             h1 {
                 font-size: 4em;
@@ -39,7 +39,7 @@
 }
 
 @media only screen and (min-width: 580px) {
-    .landingSection {
+    .landing {
         .text {
             h1 {
                 font-size: 5em;
@@ -49,7 +49,7 @@
 }
 
 @media only screen and (min-width: 860px) {
-    .landingSection {
+    .landing {
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
