--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,6 +3,7 @@
     grid-template-rows: auto 1fr;
     justify-items: center;
     align-items: center;
+    gap: 40px;
     background-color: white;
     color: black;
     padding: 0 10px;
