--- a/app/components/contact-section/contact.module.scss
+++ b/app/components/contact-section/contact.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
 
     .header {
         display: flex;
