--- a/app/components/portfolio-section/portfolio.module.scss
+++ b/app/components/portfolio-section/portfolio.module.scss
@@ -15,7 +15,7 @@
         grid-template-columns: 1fr;
         grid-template-rows: repeat(4, auto);
         justify-items: center;
-        gap: 10px 40px;
+        gap: 40px;
     }
 }
 
