--- a/app/components/project/project.module.scss
+++ b/app/components/project/project.module.scss
@@ -1,7 +1,7 @@
 .project {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto 1fr 1fr;
+    grid-template-rows: 1fr auto 1fr auto;
     justify-items: center;
     gap: 20px;
     text-align: center;
@@ -70,5 +70,11 @@
         h1 {
             font-size: 3.5em;
         }
+    }
+}
+
+@media only screen and (min-width: 1120px) {
+    .project {
+        grid-template-rows: 1fr auto 1fr 1fr;
     }
 }
