--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,12 +1,19 @@
 .main {
     display: grid;
     grid-template-rows: auto 1fr;
-    justify-items: center;
-    align-items: center;
-    gap: 40px;
     background-color: white;
     color: black;
-    padding: 0 10px;
+    height: 100vh;
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        height: 100%;
+        overflow: scroll;
+        padding: 40px 0 0;
+    }
 }
 
 .dark {
@@ -15,13 +22,13 @@
 }
 
 @media only screen and (min-width: 480px) {
-    .main {
-        padding: 0 25px;
+    .content {
+        padding: 40px 25px 0;
     }
 }
 
 @media only screen and (min-width: 1160px) {
-    .main {
-        padding: 0 50px;
+    .content {
+        padding: 40px 0 0;
     }
 }
