--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -1,7 +1,9 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    gap: 10px;
     width: 100%;
     padding: 10px;
     font-size: 22px;
@@ -10,9 +12,6 @@
     letter-spacing: 2px;
 
     ul {
-        display: flex;
-        gap: 30px;
-
         li {
             list-style-type: none;
 
@@ -27,11 +26,57 @@
         border: none;
         cursor: pointer;
     }
+
+    .buttons {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+
+        ul {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+        }
+    }
+
+    nav {
+        width: 100%;
+
+        ul {
+            display: grid;
+            grid-template-rows: repeat(2, 1fr);
+            grid-template-columns: repeat(2, 1fr);
+            gap: 5px;
+            justify-items: center;
+            align-items: center;
+            width: 100%;
+
+            li {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+    }
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 580px) {
     .navbar {
         padding: 10px 25px;
+
+        nav ul {
+            grid-template-rows: 1fr;
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
+}
+
+@media only screen and (min-width: 1020px) {
+    .navbar {
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
 
