--- a/app/page.module.css
+++ b/app/page.module.css
@@ -9,10 +9,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 40px;
+        gap: 200px;
         height: 100%;
         overflow: scroll;
-        padding: 40px 0 0;
+        padding: 80px 5px 5px;
     }
 }
 
