--- a/app/components/portfolio-section/portfolio.module.scss
+++ b/app/components/portfolio-section/portfolio.module.scss
@@ -29,6 +29,9 @@
 
 @media only screen and (min-width: 1120px) {
     .portfolio {
+        width: 100%;
+        max-width: 1680px;
+
         > h1 {
             font-size: 8em;
         }
