Change underline color to white for dark mode

--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -68,6 +68,12 @@
 
 .dark {
     border-bottom: 3px solid white;
+
+    nav ul li {
+        &:hover {
+            border-bottom: 3px solid white;
+        }
+    }
 }
 
 @media only screen and (min-width: 580px) {
