Update navbar to make underline effect on desktop/laptop views only

--- a/app/components/navbar/navbar.module.scss
+++ b/app/components/navbar/navbar.module.scss
@@ -30,14 +30,14 @@
 
     .buttons {
         display: flex;
-        justify-content: space-around;
+            justify-content: space-around;
         width: 100%;
 
         ul {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
+                justify-content: center;
+                align-items: center;
+                gap: 20px;
         }
     }
 
@@ -55,12 +55,8 @@
 
             li {
                 display: flex;
-                justify-content: center;
-                align-items: center;
-
-                &:hover {
-                    border-bottom: 3px solid black;
-                }
+                    justify-content: center;
+                    align-items: center;
             }
         }
     }
@@ -91,6 +87,10 @@
     .navbar {
         flex-direction: row;
         justify-content: space-between;
+
+        li :hover {
+            border-bottom: 3px solid black;
+        }
     }
 }
 
